--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=7.0.0",
         "illuminate/console": "~5.0",
-        "illuminate/support": "~5.0",       
-        "laravelcollective/html": "^5.4.0"
+        "illuminate/support": "~5.0"
     },
     
     "autoload": {
